# quantsim

./: README.md  pyproject.toml
.github/workflows/: ci.yml  trade.yml
docs/: demo-data.csv
quantsim/: __init__.py  backtest.py  broker.py  cli.py  data.py  execution.py  live.py  orderbook.py  plot.py  report.py  simulate.py  strategies.py
scripts/: bench_orderbook.py
tests/: test_backtest.py  test_execution.py  test_live.py  test_orderbook.py  test_simulate.py
