[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "quantsim"
version = "0.1.0"
description = "Monte Carlo market simulator: GBM price paths with VaR/CVaR, Sharpe and max-drawdown analytics in your terminal"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
quantsim = "quantsim.cli:main"

[tool.setuptools.packages.find]
include = ["quantsim*"]
