[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "quantsim"
version = "0.2.0"
description = "Backtest trading strategies on real market data and run Monte Carlo risk simulations — Sharpe, VaR/CVaR, drawdowns, equity curves — in your terminal"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
data = ["yfinance>=0.2"]
plot = ["matplotlib>=3.6"]
dev = ["pytest>=7"]
all = ["yfinance>=0.2", "matplotlib>=3.6"]

[project.scripts]
quantsim = "quantsim.cli:main"

[tool.setuptools.packages.find]
include = ["quantsim*"]
