[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "quantsim"
version = "0.3.0"
description = "A full quant stack in one package: Monte Carlo simulation, strategy backtesting with order-book execution modeling, a price-time priority matching engine, and live paper trading of the same strategies"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
data = ["yfinance>=0.2"]
plot = ["matplotlib>=3.6"]
dev = ["pytest>=7"]
all = ["yfinance>=0.2", "matplotlib>=3.6"]

[project.scripts]
quantsim = "quantsim.cli:main"

[tool.setuptools.packages.find]
include = ["quantsim*"]
